# axiom-kg

./: LICENSE  README.md  pyproject.toml
axiom/: __init__.py  core.py
axiom/adapters/: __init__.py  akn.py  base.py  epub.py  fhir.py  ical.py  openapi.py  package.py  rss.py  schemaorg.py  xbrl.py
examples/: growth.py
tests/: test_core.py
