[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-kg"
version = "0.2.0"
description = "Semantic coordinates for derivable knowledge. 9 adapters for structured schemas."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Jonathan Sandhu", email = "jonathan@sandhuconsulting.com"}
]
keywords = [
    "knowledge-graph",
    "semantic-web", 
    "schema-org",
    "json-ld",
    "openapi",
    "fhir",
    "xbrl",
    "derivable-knowledge",
    "neuro-symbolic",
    "ai-structured-web"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Zero required dependencies - core functionality works standalone
dependencies = []

[project.optional-dependencies]
# Optional dependencies for specific adapters
yaml = ["pyyaml>=6.0"]
toml = ["toml>=0.10"]  # Only needed for Python <3.11
all = [
    "pyyaml>=6.0",
    "toml>=0.10",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/BigBirdReturns/axiom-kg"
Documentation = "https://github.com/BigBirdReturns/axiom-kg#readme"
Repository = "https://github.com/BigBirdReturns/axiom-kg"
Issues = "https://github.com/BigBirdReturns/axiom-kg/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["axiom*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
